# obey-the-testing-goat

./: .editorconfig  .gitignore  .pre-commit-config.yaml  functional_tests.py  pyproject.toml  setup.cfg
lists/: tests.py  views.py
lists/migrations/: 0001_initial.py
lists/templates/lists/: home.html
superlists/: settings.py  urls.py
