[tool.poetry]
name = "obey_the_testing_goat"
version = "0.1.0"
description = ""
authors = ["jlucasoliveira <lucasosilva68@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.10"
selenium = "^3.141.0"
Django = "^3.2.5"
python-decouple = "^3.4"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
