[flake8]
exclude = .git,.tox,*/migrations/*
max-line-length = 119

[options]
python_requires = >= 3.4

[isort]
combine_as_imports = true
include_trailing_comma = true
use_parentheses = true
line_length = 119
multi_line_output = 5
skip = migrations
not_skip = __init__.py
known_third_party = rest_framework,dj_rest_auth,allauth
known_django = django
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[mypy]
plugins = pydantic.mypy

follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
ignore_missing_imports = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy.*.migrations.*]
ignore_errors = true
